# django-app

DjangoIntro/: .gitignore  Dockerfile  devices.csv  docker-compose.yaml  pyproject.toml  requirements.txt
DjangoIntro/firstsite/: requirements.txt
DjangoIntro/firstsite/blogapp/: models.py  urls.py  views.py
DjangoIntro/firstsite/blogapp/management/commands/: create_article.py
DjangoIntro/firstsite/blogapp/migrations/: 0001_initial.py
DjangoIntro/firstsite/blogapp/templates/blogapp/: article_list.html  base.html
DjangoIntro/firstsite/firstsite/: settings.py  urls.py
DjangoIntro/firstsite/locale/en/LC_MESSAGES/: django.po
DjangoIntro/firstsite/locale/ru/LC_MESSAGES/: django.po
DjangoIntro/firstsite/myauth/: models.py  urls.py  views.py
DjangoIntro/firstsite/myauth/migrations/: 0001_initial.py  0002_profile_avatar.py
DjangoIntro/firstsite/requestdaapp/: apps.py  forms.py  middlewares.py  urls.py  views.py
DjangoIntro/firstsite/shopapp/: admin.py  admin_mixins.py  forms.py  models.py  serializers.py  sitemap.py  tests.py  urls.py  views.py
DjangoIntro/firstsite/shopapp/fixtures/: order.json  product-fixture.json  user-fixture.json
DjangoIntro/firstsite/shopapp/migrations/: 0001_initial.py  0002_product_created_at_product_discount_product_price.py  0003_product_archived.py  0004_order.py  0005_order_user.py  0006_order_products.py  0007_alter_product_options_alter_product_discount.py  0008_alter_product_price.py  0009_product_author.py  0010_alter_order_options_alter_product_options_and_more.py
HTML_CSS/: project.html  style.css
(+39 files in other folders)
