[project]
name = "djangointro"
version = "0.1.0"
description = ""
authors = [
    {name = "Кристина Брусник",email = "kristya.27@mail.ru"}
]
requires-python = "^3.11"
dependencies = [
    "django-rest-framework (>=0.1.0,<0.2.0)",
    "django-filter (==25.1)",
    "django-debug-toolbar (==6.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "pillow (==11.3.0)",
    "django (==5.2.4)",
    "djangorestframework (==3.16.1)",
    "sqlparse (==0.5.3)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
